# Android-Terminal-Emulator

./: build-manual.sh  build-release.sh  build.gradle  full-build.sh  gradle.properties  settings.gradle
emulatorview/: build.gradle
emulatorview/src/main/java/jackpal/androidterm/emulatorview/: Bitmap4x8FontRenderer.java  EmulatorView.java  FloatingKeyboardView.java  TermSession.java  TextInputKeyboardView.java
libtermexec/: build.gradle
libtermexec/src/main/cpp/: CMakeLists.txt  process.cpp
libtermexec/src/main/java/jackpal/androidterm/: TermExec.java
libtermexec/src/main/java/jackpal/androidterm/libtermexec/v1/: ITerminal.java
samples/intents/: build.gradle
samples/pathbroadcasts/: build.gradle
samples/telnet/: build.gradle
term/: build.gradle
term/src/main/: AndroidManifest.xml
term/src/main/cpp/: CMakeLists.txt
term/src/main/java/jackpal/androidterm/: GenericTermSession.java  ShellTermSession.java  Term.java  TermPreferences.java  TermService.java  TermViewFlipper.java  WindowList.java
term/src/main/java/jackpal/androidterm/extrakeys/: ExtraKeyButton.java  ExtraKeysConstants.java  ExtraKeysInfo.java  ExtraKeysView.java
term/src/main/java/jackpal/androidterm/shortcuts/: AddShortcut.java  TextIcon.java
term/src/main/java/jackpal/androidterm/util/: ShortcutEncryption.java  TermSettings.java
term/src/main/res/layout/: term_activity.xml
term/src/main/res/menu/: main.xml
term/src/main/res/values/: strings.xml
term/src/main/res/xml/: preferences.xml
